# sionna-rk-neural_rx

./: README.md
configs/b200_arm64/: .env  demapper_trt.config  docker-compose.yaml
configs/b200_x86/: .env  docker-compose.yaml
configs/common/: .env.template  docker-compose.override.yaml.template  gnb.sa.band78.106prbs.conf  gnb.sa.band78.24prbs.conf  gnb.sa.band78.51prbs.conf  mini_nonrf_config.yaml  nrue.uicc.conf  oai_db.sql
configs/rfsim_arm64/: .env  \  docker-compose.override.yaml  docker-compose.yaml
configs/rfsim_x86/: .env  docker-compose.override.yaml  docker-compose.yaml
tutorials/: CMakeLists.txt  plugins.c  plugins.h
tutorials/neural_demapper/models/: neural_demapper.2xfloat16.plan
tutorials/neural_rx/: CMakeLists.txt  neural_rx_defs.h  neural_rx_extern.h  neural_rx_load.c  nr_neural_rx_capture.c  nr_neural_rx_capture.h
